# nap-trap_paper

./: .gitignore  README.md  build_all.py  pyproject.toml
doc/: db_schema.sql  figures.mpl_style  kozak.json
examples/: naptrap_analysis.ipynb
libraries/kozak/: build_db.toml
libraries/multiframe/: build_db.toml  selector.toml
libraries/utr5_fish/: build_db.toml  selector.toml
libraries/validation/: build_db.toml
src/database/: build_db.py  db_to_sqlite.py  selector.py
src/db_analysis/: __init__.py  enrichment.py  feature_correlation.py  meme.py  model.py  readcount_correlation.py
src/db_data/: calculate_delta.py
src/db_features/: dinucleotide.py  hot_encoded.py  kmer_counter.py  kozak.py  structure.py
src/db_plot/: plot_random_forest.py
src/mpradb/database/: db_to_sqlite.py  mpra_db.py
src/mpradb/db_analysis/: calculate_enrichment.py  enrichment.py  meme.py  readcount_correlation.py
src/mpradb/db_data/: add_data.py
src/mpradb/db_features/: orf_finder.py
src/mpradb/db_plot/: plot_enrichment.py  plot_random_forest.py  plot_replicate_heatmap.py  plot_replicates.py  plotter.py
src/naptrap/database/: mpra_db.py
src/naptrap/preprocessing/: count_reads.py  count_unique.py
src/naptrap_scripts/: build_db.py  count_reads.py  count_unique.py  read_cutoff_decision.py
src/preprocessing/: count_reads.py
